--- a/Diviseur.html
+++ b/Diviseur.html
@@ -5,22 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.2/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
     <title>Divisor</title>
 </head>
 
 <body class="h-screen">
-    <nav class="bg-white shadow dark:bg-gray-800 h-8p">
+    <nav class="bg-white shadow dark:bg-gray-800">
         <div class="container flex items-center justify-center p-6 mx-auto text-gray-600 capitalize dark:text-gray-300">
             <a href="./index.html"
                 class="border-b-2 border-transparent hover:text-gray-800 dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6">home</a>
             <a href="./LogChecker.html"
-                class="text-gray-800 dark:text-gray-200 border-b-2 border-blue-500 mx-1.5 sm:mx-6">Log Checker</a>
+                class="border-b-2 border-transparent hover:text-gray-800 dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6">Log Checker</a>
             <a href="./proxy.html"
                 class="border-b-2 border-transparent hover:text-gray-800 dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6">Proxy
                 Update</a>
             <a href="./Diviseur.html"
-                class="border-b-2 border-transparent hover:text-gray-800 dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6">Divisor</a>
+                class="text-gray-800 dark:text-gray-200 border-b-2 border-blue-500 mx-1.5 sm:mx-6">Divisor</a>
         </div>
         <ul class="container flex items-center justify-center p-6 gap-3 mx-auto text-gray-600 capitalize dark:text-gray-300">
             <div class="my-2 border mx-auto border-[2px] w-10/12 justify-center flex items-center rounded-md shadow-md">
@@ -53,15 +56,31 @@
                     <input id="Drops" type="number" class="w-full h-12 px-4 py-1 rounded-r-md border border-gray-100 text-gray-800 focus:outline-none" placeholder="Leave a Number Of Drops">
                 </div>
             </div>
-            <li class="nav-item d-flex align-items-center mx-3">
-                <label for="Seperateur" class="w-100">Seperateur</label>
-                <select class="form-control" id="Seperateur">
-                    <option value=";">;</option>
-                    <option value="\n">\n</option>
-                </select>
-            </li>
+            <div class="my-2 border mx-auto border-[2px] w-10/12 justify-center flex items-center rounded-md shadow-md">
+                <div>
+                    <label for="Seperateur" class="flex items-center bg-gray-100 rounded-l-md border border-white justify-center w-12 h-12 text-white">
+                        <img src="./src/img/Seperateur.png" alt="Drop Logo">
+                    </label>
+                </div>
+                <div class="w-full">
+                    <select class="w-full h-12 px-4 py-1 rounded-r-md border border-gray-100 text-gray-800 focus:outline-none" id="Seperateur">
+                        <option value=";">;</option>
+                        <option value="\n">\n</option>
+                    </select>
+                </div>
+            </div>
         </ul>
     </nav>
+    <div class="d-flex justify-content-center flex-wrap gap-3">
+		<span class="btn btn-success" onclick="getProfiles()" id="getProfilesExcel">
+			Download Profiles 
+			<i class="fa fa-download"></i>
+		</span>
+		<span class="btn btn-success" onclick="generateZip()" id="generateSeedsZip">
+			Download Seeds 
+			<i class="fa fa-download"></i>
+		</span>
+	</div>
 </body>
 
 </html>
