--- a/Diviseur.html
+++ b/Diviseur.html
@@ -25,7 +25,7 @@
             <a href="./Diviseur.html"
                 class="text-gray-800 dark:text-gray-200 border-b-2 border-blue-500 mx-1.5 sm:mx-6">Divisor</a>
         </div>
-        <ul class="container flex items-center justify-center p-6 gap-3 mx-auto text-gray-600 capitalize dark:text-gray-300">
+        <ul class="container flex items-center justify-center p-1 gap-3 mx-auto text-gray-600 capitalize dark:text-gray-300">
             <div class="my-2 border mx-auto border-[2px] w-10/12 justify-center flex items-center rounded-md shadow-md">
                 <div>
                     <label for="Entity" class="flex items-center bg-gray-100 rounded-l-md border border-white justify-center w-12 h-12 text-white">
@@ -63,24 +63,24 @@
                     </label>
                 </div>
                 <div class="w-full">
-                    <select class="w-full h-12 px-4 py-1 rounded-r-md border border-gray-100 text-gray-800 focus:outline-none" id="Seperateur">
+                    <select class="bg-gray-50 w-full h-12 px-4 py-1 rounded-r-md border border-gray-100 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" id="Seperateur">
                         <option value=";">;</option>
                         <option value="\n">\n</option>
                     </select>
                 </div>
             </div>
         </ul>
+        <div class="container flex items-center justify-center p-1 gap-3 mx-auto text-gray-600 capitalize dark:text-gray-300">
+            <span class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" onclick="getProfiles()" id="getProfilesExcel">
+                Download Profiles 
+                <i class="fa fa-download"></i>
+            </span>
+            <span class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" onclick="generateZip()" id="generateSeedsZip">
+                Download Seeds 
+                <i class="fa fa-download"></i>
+            </span>
+        </div>
     </nav>
-    <div class="d-flex justify-content-center flex-wrap gap-3">
-		<span class="btn btn-success" onclick="getProfiles()" id="getProfilesExcel">
-			Download Profiles 
-			<i class="fa fa-download"></i>
-		</span>
-		<span class="btn btn-success" onclick="generateZip()" id="generateSeedsZip">
-			Download Seeds 
-			<i class="fa fa-download"></i>
-		</span>
-	</div>
 </body>
 
 </html>
