--- a/Diviseur.html
+++ b/Diviseur.html
@@ -81,6 +81,98 @@
             </span>
         </div>
     </nav>
+
+    <div x-data="setup()" x-init="$refs.loading.classList.add('hidden');">
+      <div class="flex h-screen antialiased text-gray-900 bg-gray-100 dark:bg-dark dark:text-light">
+        <!-- Loading screen -->
+        <div
+          x-ref="loading"
+          class="fixed inset-0 z-50 flex items-center justify-center text-2xl font-semibold text-white bg-blue-600"
+        >
+          Loading.....
+        </div>
+
+        <!-- Sidebar -->
+        <div
+          x-transition:enter="transform transition-transform duration-300"
+          x-transition:enter-start="-translate-x-full"
+          x-transition:enter-end="translate-x-0"
+          x-transition:leave="transform transition-transform duration-300"
+          x-transition:leave-start="translate-x-0"
+          x-transition:leave-end="-translate-x-full"
+          x-show="isSidebarOpen"
+          class="fixed inset-y-0 z-10 flex w-80"
+        >
+          <!-- Curvy shape -->
+          <svg
+            class="absolute inset-0 w-full h-full text-white"
+            style="filter: drop-shadow(10px 0 10px #00000030)"
+            preserveAspectRatio="none"
+            viewBox="0 0 309 800"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M268.487 0H0V800H247.32C207.957 725 207.975 492.294 268.487 367.647C329 243 314.906 53.4314 268.487 0Z"
+            />
+          </svg>
+          <!-- Sidebar content -->
+          <div class="z-10 flex flex-col flex-1">
+            <div class="flex items-center justify-between flex-shrink-0 w-64 p-4">
+              <!-- Logo -->
+              <a href="./Diviseur.html">
+                <span class="sr-only">Helpers</span>
+                <img src="./src/img/helpers.gif" alt="Helpers Logo">
+              </a>
+              <!-- Close btn -->
+              <button @click="isSidebarOpen = false" class="p-1 rounded-lg focus:outline-none focus:ring">
+                <svg
+                  class="w-6 h-6"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+                <span class="sr-only">Close sidebar</span>
+              </button>
+            </div>
+            <nav id="RdpsInEntity" class="flex flex-col flex-1 w-64 p-4 mt-4"></nav>
+          </div>
+        </div>
+        <main class="flex flex-col items-center justify-start flex-1">
+          <!-- Page content -->
+          <button @click="isSidebarOpen = true" class="fixed p-2 text-white bg-black rounded-lg top-5 left-5">
+            <svg
+              class="w-6 h-6"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+            <span class="sr-only">Open menu</span>
+          </button>
+          <h1 class="sr-only">Home</h1>
+          <div id="AllDivisuerRdpsInEntity"></div>
+        </main>
+      </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.8.1/alpine.js"></script>
+    <script>
+        const setup = () => {
+            return {
+                isSidebarOpen: true,
+            }
+        }
+    </script>
+
+	<script src="./src/js/main.js"></script>
+	<script src="./src/js/diviseur.js"></script>
 </body>
 
 </html>
