--- a/Diviseur.html
+++ b/Diviseur.html
@@ -83,7 +83,7 @@
     </nav>
 
     <div x-data="setup()" x-init="$refs.loading.classList.add('hidden');">
-      <div class="flex h-screen antialiased text-gray-900 bg-gray-100 dark:bg-dark dark:text-light">
+      <div class="flex h-full antialiased text-gray-900 bg-gray-100 dark:bg-dark dark:text-light">
         <!-- Loading screen -->
         <div
           x-ref="loading"
@@ -142,7 +142,7 @@
             <nav id="RdpsInEntity" class="flex flex-col flex-1 w-64 p-4 mt-4"></nav>
           </div>
         </div>
-        <main class="flex flex-col items-center justify-start flex-1">
+        <main class="h-77.80195865070729vh flex flex-col items-center justify-start flex-1">
           <!-- Page content -->
           <button @click="isSidebarOpen = true" class="fixed p-2 text-white bg-black rounded-lg top-5 left-5">
             <svg
